--- a/login-screen.html
+++ b/login-screen.html
@@ -19,7 +19,7 @@
                 <div class="flex flex-col gap-[64px] h-[692px] justify-center">
                     <div class="flex flex-col gap-8">
                         <div class="flex flex-col gap-3">
-                            <img src="https://citymis.co/custom/sanisidro/_images/slide-logo.png" alt="Logo Mi Ciudad" class="w-[256px] h-[160px]" />
+                            <img src="https://github.com/otroluismas/proto-brand/blob/9667e505b04e5bb04c97fa4394796e513132b1a8/logo%20mi%20ciudad.png" alt="Logo Mi Ciudad" class="w-[256px] h-[160px]" />
                             <p class="text-[rgba(0,0,0,0.9)] text-4xl font-semibold leading-[44px] tracking-[-0.72px]">¡Hola!</p>
                             <p class="text-[rgba(0,0,0,0.9)] text-2xl leading-8 tracking-[-0.48px]">Bienvenido a Gestión Documental Inteligente de Mi Ciudad.</p>
                         </div>
